--- a/public/index.html
+++ b/public/index.html
@@ -20,10 +20,9 @@
   
   <meta name="apple-mobile-web-app-capable" content="yes">
   <!-- <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"> -->
-  <link rel="apple-touch-icon" href="static/icons/apple-touch-icon.png">
-  <link rel="icon" href="static/icons/favicon.png">
+  <link rel="apple-touch-icon" href="Marcobot.png">
+  <link rel="icon" href="Marcobot.png">
   <link rel="manifest" href="/%PUBLIC_URL%/manifest.json">
-  
   <!-- built styles file will be auto injected -->
 </head>
 <body>
