Main search bar now works

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
   <title>Marcobot</title>
   
   <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-title" content="Marcobot">
   <!-- <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"> -->
   <link rel="apple-touch-icon" href="Marcobot.png">
   <link rel="icon" href="Marcobot.png">
