--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
       * Enable inline JS: add 'unsafe-inline' to default-src
   -->
   <meta http-equiv="Content-Security-Policy" content="default-src * 'self' 'unsafe-inline' 'unsafe-eval' data: gap: content:">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover">
+  <meta name="viewport" content="width=device-width, minimal-ui, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
 
   <meta name="theme-color" content="#007aff">
   <meta name="format-detection" content="telephone=no">
@@ -20,7 +20,7 @@
   
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-title" content="Marcobot">
-  <!-- <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"> -->
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <link rel="apple-touch-icon" href="Marcobot.png">
   <link rel="icon" href="Marcobot.png">
   <link rel="manifest" href="/%PUBLIC_URL%/manifest.json">
