--- a/public/index.html
+++ b/public/index.html
@@ -18,9 +18,10 @@
   <meta name="msapplication-tap-highlight" content="no">
   <title>Marcobot</title>
   
-  <meta name="apple-mobile-web-app-capable" content="yes">
+  <!-- <meta name="apple-mobile-web-app-capable" content="no"> -->
   <meta name="apple-mobile-web-app-title" content="Marcobot">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  
   <link rel="apple-touch-icon" href="Marcobot.png">
   <link rel="icon" href="Marcobot.png">
   <link rel="manifest" href="/%PUBLIC_URL%/manifest.json">
