--- a/public/index.html
+++ b/public/index.html
@@ -28,8 +28,9 @@
     <meta name="apple-mobile-web-app-title" content="Marcobot" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 
-    <link rel="apple-touch-icon" href="marcobot_256.png" />
-    <link rel="icon" href="marcobot_256.png" />
+    <link rel=”shortcut icon” href=”%PUBLIC_URL%/favicon.ico”>
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/marcobot_256.png" />
+    <link rel="icon" href="%PUBLIC_URL%/marcobot_256.png" />
     <link rel="manifest" href="/%PUBLIC_URL%/manifest.json" />
     <!-- built styles file will be auto injected -->
   </head>
