--- a/public/index.html
+++ b/public/index.html
@@ -28,10 +28,10 @@
     <meta name="apple-mobile-web-app-title" content="Marcobot" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 
-    <link rel="shortcut icon" href=”/public/favicon.ico”>
-    <link rel="apple-touch-icon" href="/public/marcobot_256.png" />
-    <link rel="icon" href="/public/marcobot_256.png" />
-    <link rel="manifest" href="/public/manifest.json" />
+    <link rel="shortcut icon" href=”/favicon.ico”>
+    <link rel="apple-touch-icon" href="/marcobot_256.png" />
+    <link rel="icon" href="/marcobot_256.png" />
+    <link rel="manifest" href="/manifest.json" />
     <!-- built styles file will be auto injected -->
   </head>
   <body>
