opengraph meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,11 @@
     <meta name="msapplication-tap-highlight" content="no" />
     <title>Marcobot</title>
 
+    <meta property="og:title" content="Marcobot">
+    <meta property="og:description" content="Find App Store games without IAP">
+    <meta property="og:image" content="%PUBLIC_URL%/marcobot_256.png">
+    <meta property="og:url" content="http://marcobot.com">
+
     <!-- <meta name="apple-mobile-web-app-capable" content="no"> -->
     <meta name="apple-mobile-web-app-title" content="Marcobot" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
