--- a/public/index.html
+++ b/public/index.html
@@ -26,16 +26,16 @@
 
     <meta property="og:title" content="Marcobot">
     <meta property="og:description" content="Find App Store games without IAP">
-    <meta property="og:image" content="/marcobot_256.png">
+    <meta property="og:image" content="https://www.marcobot.com/marcobot_256.png">
     <meta property="og:url" content="https://marcobot.com">
 
     <!-- <meta name="apple-mobile-web-app-capable" content="no"> -->
     <meta name="apple-mobile-web-app-title" content="Marcobot" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 
-    <link rel="shortcut icon" href=”/favicon.ico”>
-    <link rel="apple-touch-icon" href="/marcobot_256.png" />
-    <link rel="manifest" href="/manifest.json" />
+    <link rel="shortcut icon" href=”https://www.marcobot.com/favicon.ico”>
+    <link rel="apple-touch-icon" href="https://www.marcobot.com/marcobot_256.png" />
+    <!-- <link rel="manifest" href="/manifest.json" /> -->
     <!-- built styles file will be auto injected -->
   </head>
   <body>
