--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
     <meta name="apple-mobile-web-app-title" content="Marcobot" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 
-    <link rel="shortcut icon" href=”https://www.marcobot.com/favicon.ico”>
+    <link rel="icon" href=”https://www.marcobot.com/favicon.ico”>
     <link rel="apple-touch-icon" href="https://www.marcobot.com/marcobot_256.png" />
     <!-- <link rel="manifest" href="/manifest.json" /> -->
     <!-- built styles file will be auto injected -->
