--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
 
     <meta property="og:title" content="Marcobot">
     <meta property="og:description" content="Find App Store games without IAP">
-    <meta property="og:image" content="https://www.marcobot.com/marcobot_256.png">
+    <meta property="og:image" content="https://www.marcobot.com/marcobot_og.png">
     <meta property="og:url" content="https://marcobot.com">
 
     <!-- <meta name="apple-mobile-web-app-capable" content="no"> -->
