--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <!--
   Customize this policy to fit your own app's needs. For more guidance, see:
       https://github.com/apache/cordova-plugin-whitelist/blob/master/README.md#content-security-policy
@@ -32,8 +33,8 @@
     <!-- <meta name="apple-mobile-web-app-capable" content="no"> -->
     <meta name="apple-mobile-web-app-title" content="Marcobot" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-
-    <link rel="shortcut icon" href=”https://www.marcobot.com/favicon.ico”>
+<!-- 
+    <link rel="shortcut icon" href=”https://www.marcobot.com/favicon.ico”> -->
     <link rel="apple-touch-icon" href="https://www.marcobot.com/marcobot_256.png" />
     <!-- <link rel="manifest" href="/manifest.json" /> -->
     <!-- built styles file will be auto injected -->
