--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/marcobot_256.png" />
     <!--
   Customize this policy to fit your own app's needs. For more guidance, see:
       https://github.com/apache/cordova-plugin-whitelist/blob/master/README.md#content-security-policy
@@ -35,7 +36,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 <!-- 
     <link rel="shortcut icon" href=”https://www.marcobot.com/favicon.ico”> -->
-    <link rel="apple-touch-icon" href="https://www.marcobot.com/marcobot_256.png" />
+    <!-- <link rel="apple-touch-icon" href="https://www.marcobot.com/marcobot_256.png" /> -->
     <!-- <link rel="manifest" href="/manifest.json" /> -->
     <!-- built styles file will be auto injected -->
   </head>
