--- a/public/index.html
+++ b/public/index.html
@@ -20,28 +20,24 @@
       name="viewport"
       content="width=device-width, minimal-ui, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no"
     />
-
     <meta name="theme-color" content="#007aff" />
-    <meta name="format-detection" content="telephone=no" />
-    <meta name="msapplication-tap-highlight" content="no" />
     <title>Marcobot</title>
 
-    <meta property="og:title" content="Marcobot">
-    <meta property="og:description" content="Find App Store games without IAP">
-    <meta property="og:image" content="https://www.marcobot.com/marcobot_og.png">
-    <meta property="og:url" content="https://marcobot.com">
+    <meta property="og:title" content="Marcobot" />
+    <meta property="og:description" content="Find App Store games without IAP" />
+    <meta property="og:image" content="https://www.marcobot.com/marcobot_og.png" />
+    <meta property="og:url" content="https://marcobot.com" />
 
     <!-- <meta name="apple-mobile-web-app-capable" content="no"> -->
     <meta name="apple-mobile-web-app-title" content="Marcobot" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-<!-- 
+    <!-- 
     <link rel="shortcut icon" href=”https://www.marcobot.com/favicon.ico”> -->
     <!-- <link rel="apple-touch-icon" href="https://www.marcobot.com/marcobot_256.png" /> -->
     <!-- <link rel="manifest" href="/manifest.json" /> -->
     <!-- built styles file will be auto injected -->
   </head>
   <body>
-
     <div id="root"></div>
 
     <!-- built script files will be auto injected -->
