Started doing some basic SEO (title/description)

--- a/public/index.html
+++ b/public/index.html
@@ -4,24 +4,22 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/marcobot_256.png" />
-    <!--
-  Customize this policy to fit your own app's needs. For more guidance, see:
-      https://github.com/apache/cordova-plugin-whitelist/blob/master/README.md#content-security-policy
-  Some notes:
-    * https://ssl.gstatic.com is required only on Android and is needed for TalkBack to function properly
-    * Disables use of inline scripts in order to mitigate risk of XSS vulnerabilities. To change this:
-      * Enable inline JS: add 'unsafe-inline' to default-src
-  -->
+
+    <title>Marcobot - App Store premium game search</title>
     <meta
+      name="description"
+      content="Search the App Store for premium games, games with no IAP (in-app purchases)"
+    />
+
+    <!-- <meta
       http-equiv="Content-Security-Policy"
       content="default-src * 'self' 'unsafe-inline' 'unsafe-eval' data: gap: content:"
-    />
+    /> -->
     <meta
       name="viewport"
       content="width=device-width, minimal-ui, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no"
     />
     <meta name="theme-color" content="#007aff" />
-    <title>Marcobot</title>
 
     <meta property="og:title" content="Marcobot" />
     <meta property="og:description" content="Find App Store games without IAP" />
