Fixed the little changing place of logo on first ios Load

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/marcobot_256.png" />
 
     <title>Marcobot - App Store premium game search</title>
     <meta
@@ -17,10 +16,12 @@
     /> -->
     <meta
       name="viewport"
-      content="width=device-width, minimal-ui, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no"
+      content="width=device-width, initial-scale=1"
     />
-    <meta name="theme-color" content="#007aff" />
+    <!-- <meta name="theme-color" content="#007aff" /> -->
 
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/marcobot_256.png" />
+    
     <meta property="og:title" content="Marcobot" />
     <meta property="og:description" content="Find App Store games without IAP" />
     <meta property="og:image" content="https://www.marcobot.com/marcobot_og.png" />
@@ -28,7 +29,7 @@
 
     <!-- <meta name="apple-mobile-web-app-capable" content="no"> -->
     <meta name="apple-mobile-web-app-title" content="Marcobot" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <!-- <meta name="apple-mobile-web-app-status-bar-style" content="black" /> -->
     <!-- 
     <link rel="shortcut icon" href=”https://www.marcobot.com/favicon.ico”> -->
     <!-- <link rel="apple-touch-icon" href="https://www.marcobot.com/marcobot_256.png" /> -->
